--- a/bower.json
+++ b/bower.json
@@ -22,8 +22,8 @@
     "bootstrap" : ">=3.0.0",
     "fontawesome": ">=4.0.3",
     "d3" : ">=3.4",
-    "phylotree": "git@github.com:kemaleren/phylotree.js.git#node_scaling",
-    "bootstrap-multiselect" : "git@github.com:davidstutz/bootstrap-multiselect.git#v0.9.10"
+    "phylotree": "https://github.com/kemaleren/phylotree.js.git#node_scaling",
+    "bootstrap-multiselect" : "https://github.com/davidstutz/bootstrap-multiselect.git#v0.9.10"
   },
   "license": "MIT",
   "homepage": "http://github.com/veg/veg-hiv-env",
